# discord-bot-tutorial

./: .env.example  .gitignore  Dockerfile  README.md  compose.yaml  pyproject.toml
assets/settings/: colors.toml  emojis.toml
tutorialbot/bot/: __init__.py  __main__.py
tutorialbot/bot/extensions/commands/: __init__.py  interaction.py  prefix.py
tutorialbot/bot/extensions/eventscog/: __init__.py  events.py
tutorialbot/core/: __init__.py  logging.py
tutorialbot/ext/: http.py
